--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "pkg-name",
+  "name": "@so1ve/utils",
   "version": "0.0.0",
   "packageManager": "pnpm@8.5.1",
   "author": "Ray <i@mk1.io> (@so1ve)",
   "description": "",
   "keywords": [],
-  "homepage": "https://github.com/so1ve/pkg-name#readme",
+  "homepage": "https://github.com/so1ve/utils#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/so1ve/pkg-name.git"
+    "url": "git+https://github.com/so1ve/utils.git"
   },
   "bugs": {
-    "url": "https://github.com/so1ve/pkg-name/issues"
+    "url": "https://github.com/so1ve/utils/issues"
   },
   "license": "MIT",
   "sideEffects": false,
@@ -52,14 +52,18 @@
   },
   "devDependencies": {
     "@antfu/ni": "^0.21.3",
-    "@so1ve/eslint-config": "^0.93.0",
-    "@types/node": "^18.16.3",
+    "@so1ve/eslint-config": "^0.93.2",
+    "@types/node": "^20.2.3",
     "bumpp": "^9.1.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.41.0",
+    "prettier": "^2.8.8",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4",
     "unbuild": "^1.2.1",
-    "vite": "^4.3.4",
-    "vitest": "^0.31.0"
+    "vite": "^4.3.8",
+    "vitest": "^0.31.1"
+  },
+  "dependencies": {
+    "escape-goat": "^4.0.0"
   }
 }
